# LatticeBoltzmann

./: Cargo.toml  README.md
src/: lattice.rs  main.rs  vector.rs
src/lattice/: consts.rs  funcs.rs  node.rs
